nginx gateway - 404 for undefined subdomains

--- a/gateway/usr/local/etc/nginx/nginx.conf
+++ b/gateway/usr/local/etc/nginx/nginx.conf
@@ -21,4 +21,18 @@ http {
 
     # Import server blocks for all subdomains
     include "vdomains/*.conf";
+
+    # 404 for unknown subdomains
+    server {
+        listen 443 ssl http2;
+
+        server_name *.example.com;
+        access_log /var/log/nginx/other.access.log;
+        error_log /var/log/nginx/other.error.log;
+
+        include snippets/example.com.cert.conf;
+        include snippets/ssl-params.conf;
+
+        return 404;
+    }
 }
